# osu-beatmap-pack-downloader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/osu_beatmap_pack_downloader/: __init__.py  cli.py
